# ReviewTrace

./: .env.template  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
data/: example_criteria.json  seeds.txt
docs/: ARCHITECTURE.md  AUDIT_MODEL.md  EVALUATION.md
examples/sparse_autoencoders/: README.md  criteria.json  seeds.txt
reviewtrace/: __init__.py  cli.py  llm.py  llm_json.py  manifest.py
reviewtrace/api/: app.py  db_per_request.py  schemas.py
reviewtrace/audit/: dedup.py  export.py  logger.py  models.py
reviewtrace/config/: default_policy.json  settings.py
reviewtrace/db/: connection.py  schema.sql
reviewtrace/evidence/: extractor.py  matrix.py  models.py
reviewtrace/expansion/: backward.py  controller.py  forward.py  path_tracker.py
reviewtrace/export/: csv_export.py  graphml_export.py
reviewtrace/retrieval/: errors.py  models.py  normalizer.py  orchestrator.py  planner.py  seed_loader.py
reviewtrace/screening/: classifier.py  models.py  policy.py  screener.py
reviewtrace/taxonomy/: clusterer.py  controller.py  embedder.py  exporter.py  labeler.py  linker.py  models.py
tests/: test_audit.py  test_cli_demo.py  test_db.py  test_evidence.py  test_expansion.py  test_export.py  test_manifest.py  test_normalizer.py  test_papers_db_path.py  test_screening.py  test_taxonomy.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js
(+20 files in other folders)
