[project]
name = "reviewtrace"
version = "0.1.0"
description = "Auditable literature review pipeline with full retrieval provenance"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "anthropic>=0.34.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "jinja2>=3.1.0",
    "python-levenshtein>=0.25.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
openai = [
    "openai>=1.30.0",
]
google = [
    "google-generativeai>=0.8.0",
]
all-llm = [
    "openai>=1.30.0",
    "google-generativeai>=0.8.0",
]

[project.scripts]
reviewtrace = "reviewtrace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
